# PyBasic

./: .gitignore  BUILD.md  BUILD_LINUX.md  Makefile  README.md  basicparser.py  basictoken.py  build_release.bat  build_release.ps1  build_release.py  build_release.sh  interpreter.py  music.py  music2.py  program.py  pyproject.toml  requirements-build.txt  run.py
.github/workflows/: build.yml
bns_game_pack/: ANSWER.TXT  CHASE.BAS  COMPUTER.WDS  DHL.BAS  GAMES.TXT  GENERAL.WDS  GOTCHA.BAS  LEVELS.ARC  MATH.TRV  SPORTS.WDS  STOCK.BAS  TIC.BAS  WORD.BAS  new15.txt  new16.txt  new20.txt  new22.txt  new25.txt  new25x.txt  run.bns
bt-examples/: 23bricks.bas  alarm.bas  alarm200.bas  area.bas  ballgame.bas  chime.bas  guess.bas  hello.bas  jig.bas  lunar.bas  math.bas  metric.bas  morse.bas  music.bas  pick.bas  tns.bas  workout.bas
docs/: basic.txt
examples/: array_input_read_tests.bas  date_test.bas
src/basic/: basic.py  basic_bns.py  basicparser.py  basictoken.py  flowsignal.py  interpreter.py  lexer.py  music.py  program.py  run.py
src/basic-bns/: basic-bns.py  basic_bns.py
src/disassembler/: __init__.py  cmds.py  dc.py
