[project]
name = "basic"
version = "0.1.0"
description = "Accessible BASIC environment with interpreter, runner, and BNS executor"
authors = [{ name = "Ken Perry" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pygame>=2.6.1", "numpy>=2.2.6"]

[project.scripts]
basic = "basic.basic:main"
interpreter = "basic.interpreter:main"
basic-bns = "basic.basic_bns:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
